--- a/app/src/main/res/layout/activity_add_chat.xml
+++ b/app/src/main/res/layout/activity_add_chat.xml
@@ -23,8 +23,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
+        android:hint="Name"
         android:inputType="textPersonName"
-        android:text="Name"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -45,7 +45,7 @@
         app:layout_constraintVertical_bias="0.301" />
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/editImageViewPick"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toTopOf="@+id/editTextPickName"
